crates/scene-v2-archive/tests/snapshots/composition__clear_reactions_drops_inherited_ok@clear_reactions_drops_inherited.snap
---
source: crates/scene/tests/composition.rs
expression: rendered
---
name: child

reactions:
  - selector: Stall  if: -

keybinds:

plugins:

layout tabs:
