crates/scene-v2-archive/tests/snapshots/composition__disable_plugin_drops_inherited_ok@disable_plugin_drops_inherited.snap
---
source: crates/scene/tests/composition.rs
expression: rendered
---
name: child

reactions:

keybinds:

plugins:
  - name: status  mount: status-bar  source: shipped:status  override: false

layout tabs:
