crates/scene-v2-archive/tests/snapshots/composition__duplicate_plugin_without_override_error@duplicate_plugin_without_override.snap
---
source: crates/scene/tests/composition.rs
expression: rendered
---
scene/duplicate-plugin

  × duplicate `plugin "status"` declaration across merged scenes
  help: R11: a later `plugin "<name>"` block must set `override=true` to replace an earlier declaration. Otherwise remove the duplicate or rename one of the plugins.
