crates/scene-v2-archive/tests/snapshots/composition__duplicate_tab_across_layouts_error@duplicate_tab_across_layouts.snap
---
source: crates/scene/tests/composition.rs
expression: rendered
---
scene/duplicate-tab

  × duplicate `tab "work"` across merged layouts
  help: R11: layout `tab` names must be unique across composed scenes. Rename one of the tabs, or factor the shared tab into a base scene inherited via `extends`.
