crates/scene-v2-archive/tests/snapshots/composition__include_splices_fragment_ok@include_splices_fragment.snap
---
source: crates/scene/tests/composition.rs
expression: rendered
---
name: child

reactions:
  - selector: UserEvent:splice.ready  if: -
  - selector: AgentReady  if: -

keybinds:
  - chord: Alt q  intent: splice.quit

plugins:

layout tabs:
