crates/scene-v2-archive/tests/snapshots/composition__parent_clear_on_descendant_only_noop_ok@parent_clear_on_descendant_only_noop.snap
---
source: crates/scene/tests/composition.rs
expression: rendered
---
name: child

reactions:
  - selector: UserEvent:child.only  if: -

keybinds:

plugins:

layout tabs:
